Updated gh-pages for commit 4d8f781878d76987ae06fb797ccd8bbacfc7fafa

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Index &mdash; Documentation</title>
-    <link rel="stylesheet" href="_static/pywm.css" type="text/css" />
+    <link rel="stylesheet" href="_static/style.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
@@ -25,23 +25,24 @@
     <link rel="top" title="Documentation" href="index.html" /> 
   </head>
   <body>
-<div style="background-color: white; text-align: left; padding: 5px 5px 5px 15px">
-<a href="index.html">
-<img src="_static/pythonwildmagic.png" alt="Da logo, man." />
-</a>
+<div class="pageheader">
+  <div>
+    <a href="index.html">
+      <img src="_static/logo.png" alt="Da logo." />
+    </a>
+  </div>
 </div>
-
 
     <div class="related">
       <h3>Navigation</h3>
       <ul>
-<li><a href="index.html">Home</a>|</li>
-<li><a href="installing.html">Installing</a>|</li>
-<li><a href="code_analysis.html">Code Analysis</a>|</li>
-<li><a href="swig_interface.html">SWIG Interface</a>|</li>
-<li><a href="api.html">API</a>|</li>
-<li><a href="genindex.html">Index</a>|</li>
-<li><a href="names.html">Names</a>|</li>
+<li><a href="index.html">Home</a></li>
+<li><a href="installing.html">Installing</a></li>
+<li><a href="code_analysis.html">Code Analysis</a></li>
+<li><a href="swig_interface.html">SWIG Interface</a></li>
+<li><a href="api.html">API</a></li>
+<li><a href="genindex.html">Index</a></li>
+<li><a href="names.html">Names</a></li>
 <li><a href="about.html">About</a></li>
  
       </ul>
