--- a/swig_interface.html
+++ b/swig_interface.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>SWIG Interface &mdash; Documentation</title>
-    <link rel="stylesheet" href="_static/pywm.css" type="text/css" />
+    <link rel="stylesheet" href="_static/style.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
@@ -27,23 +27,24 @@
     <link rel="prev" title="Code Analysis" href="code_analysis.html" /> 
   </head>
   <body>
-<div style="background-color: white; text-align: left; padding: 5px 5px 5px 15px">
-<a href="index.html">
-<img src="_static/pythonwildmagic.png" alt="Da logo, man." />
-</a>
+<div class="pageheader">
+  <div>
+    <a href="index.html">
+      <img src="_static/logo.png" alt="Da logo." />
+    </a>
+  </div>
 </div>
-
 
     <div class="related">
       <h3>Navigation</h3>
       <ul>
-<li><a href="index.html">Home</a>|</li>
-<li><a href="installing.html">Installing</a>|</li>
-<li><a href="code_analysis.html">Code Analysis</a>|</li>
-<li><a href="swig_interface.html">SWIG Interface</a>|</li>
-<li><a href="api.html">API</a>|</li>
-<li><a href="genindex.html">Index</a>|</li>
-<li><a href="names.html">Names</a>|</li>
+<li><a href="index.html">Home</a></li>
+<li><a href="installing.html">Installing</a></li>
+<li><a href="code_analysis.html">Code Analysis</a></li>
+<li><a href="swig_interface.html">SWIG Interface</a></li>
+<li><a href="api.html">API</a></li>
+<li><a href="genindex.html">Index</a></li>
+<li><a href="names.html">Names</a></li>
 <li><a href="about.html">About</a></li>
  
       </ul>
@@ -108,8 +109,7 @@ Basically, it runs <em>Make</em> on the Wild Magic source tree in &#8220;dry-run
 <img alt="_images/swig_interface_01.png" class="align-center" src="_images/swig_interface_01.png" />
 <p>From the top of the source tree, create the list and save it in <tt class="docutils literal"><span class="pre">analysis/</span></tt> directory
 (note the use of the <em>Make</em> command as the second argument&#8211;it should be the same as that used during installation of Wild Magic):</p>
-<div class="highlight-python"><pre>cd $WM5_PY_PATH
-tools/get-cpp-files.py $WM5_PATH 'make -j8 CFG=Release -f makefile.wm5' &gt; analysis/cpp.files</pre>
+<div class="highlight-python"><pre>tools/get-cpp-files.py $WM5_PATH 'make -j8 CFG=Release -f makefile.wm5' &gt; analysis/cpp.files</pre>
 </div>
 </div>
 <div class="section" id="create-list-of-include-files">
