Updated gh-pages for commit 872e2a7ff656b9e35e231fe56d44592d1f120abd

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ the C++ library for real-time computer graphics and physics, mathematics, geomet
 <span class="n">intr</span><span class="o">.</span><span class="n">Find</span><span class="p">()</span>
 <span class="k">for</span> <span class="n">index</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">intr</span><span class="o">.</span><span class="n">GetQuantity</span><span class="p">()):</span>
     <span class="n">point</span> <span class="o">=</span> <span class="n">intr</span><span class="o">.</span><span class="n">GetPoint</span><span class="p">(</span><span class="n">index</span><span class="p">)</span>
-    <span class="c">#  (2.0 0.0 0.0)</span>
-    <span class="c">#  (-4.0 0.0 0.0)</span>
+    <span class="c">#   2.0 0.0 0.0</span>
+    <span class="c">#  -4.0 0.0 0.0</span>
     <span class="k">print</span><span class="p">(</span><span class="n">point</span><span class="o">.</span><span class="n">X</span><span class="p">(),</span> <span class="n">point</span><span class="o">.</span><span class="n">Y</span><span class="p">(),</span> <span class="n">point</span><span class="o">.</span><span class="n">Z</span><span class="p">())</span>
 </pre></div>
 </div>
@@ -131,7 +131,7 @@ the C++ library for real-time computer graphics and physics, mathematics, geomet
   
     <div class="footer">
         &copy; Copyright 2012, Velimir Mlaker.
-      Last updated on Apr 07, 2013.
+      Last updated on Apr 08, 2013.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.8.
     </div>
 
